--- a/client/style.css
+++ b/client/style.css
@@ -189,7 +189,7 @@ body {
 #hostInfo {
   height: 40px;
   width: 200px;
-  background-image: url('./assets/Screen\ Shot\ 2020-08-21\ at\ 12.22.21\ PM.png');
+  background-image: url('./assets/hoststats.png');
   background-repeat: no-repeat;
   position: relative;
   bottom: 7px;
